@@ -1,16 +1,20 @@
-from django.utils.translation import gettext_lazy as _
+# from django.utils.translation import gettext_lazy as _
 
 UUID_CHANNEL_USERMESSAGES = '395ca7a2-24f3-4348-a0d3-55887e956e61'
 
-PRIO_IMP_PK      = 1
-PRIO_VERY_IMP_PK = 2
-PRIO_NOT_IMP_PK  = 3
+# PRIO_IMP_PK      = 1
+# PRIO_VERY_IMP_PK = 2
+# PRIO_NOT_IMP_PK  = 3
 
-USERMESSAGE_PRIORITIES = {
-    PRIO_IMP_PK:      _('Important'),
-    PRIO_VERY_IMP_PK: _('Very important'),
-    PRIO_NOT_IMP_PK:  _('Not important'),
-}
+# USERMESSAGE_PRIORITIES = {
+#     PRIO_IMP_PK:      _('Important'),
+#     PRIO_VERY_IMP_PK: _('Very important'),
+#     PRIO_NOT_IMP_PK:  _('Not important'),
+# }
+
+UUID_PRIORITY_IMPORTANT      = 'd9dba2d3-18cf-4166-9bd7-6a9fa299e9e1'
+UUID_PRIORITY_VERY_IMPORTANT = '16445980-4abe-409c-8c45-f2f4f9bfc945'
+UUID_PRIORITY_NOT_IMPORTANT  = '2e4eb53f-e686-42e5-8352-4d3c0ef6c19e'
 
 MIN_HOUR_4_TODO_REMINDER = 'assistants-min_hour_4_todo_reminder'
 
